alignment of rank fixed and deactivate homestate removed from inactive components

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -67,7 +67,6 @@
 
 .row .col-lg-4 a span.rank-value {
   font-size: 4.5em;
-  position: absolute;
   margin-left: -11px;
   color: #fff;
   margin-top: 6px
